# adk-livekit-mer

./: .gitignore  LICENSE  README.md  docker-compose.yml
server/: .env.example  Dockerfile  adk_bridge.py  demo_agent.py  pyproject.toml  token_api.py  worker.py
web/: .env.example  index.html  package.json  pnpm-lock.yaml
web/src/: App.css  App.tsx  types.ts
web/src/components/: CallPanel.tsx  DebugPanel.tsx
web/src/hooks/: useToken.ts
